# lemball-decomp

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  PRESERVATION_BASELINE.json  README.md  reccmp-project.yml
.github/: requirements-ci.txt
.github/workflows/: build-and-compare.yml  build-and-verify.yml  decomp-dev.yml  msvc420-build.yml
LEMBALL/: GAME.CPP  GAME.H  MAIN.CPP  MAIN.H  SHELLUI.CPP  SHELLUI.H  VERSION.H
LEMBALL/VISOS/: BASE_WINDOW.H  COMMON.H  MOGLOAD.CPP  VSGDI.CPP  VSGDI.H  VSINIT.CPP  VSINIT.H  VSMEM.CPP  VSMEM.H  VSWIN.CPP  VSWIN.H  WIN32.H
cmake/: msvc420-force-symbols.rsp  msvc420-toolchain.cmake  openwatcom-toolchain.cmake
data/: manifest.json  runtime-symbols.csv
docs/: pipeline.md  toolchain.md
include/VISOS/: CTEXTWIN.H  EFFSTRM.H  MOGLOAD.H  VSDBG.H  VSGDI.H  VSINIT.H  VSINVIS.H  VSMATH.H  VSMEM.H  VSNET.H  VSSTRM.H  VSWINDOW.H  WIN32.H
manifests/source_files/: LEMBALL.txt
manifests/target_slices/: LEMBALL.txt
orig/LEMBALL/: LEMBALL.EXE.gpg
scripts/: build_target_objects.sh  check_host_sources.sh  check_watcom_profile.sh
src/: GAME.CPP  GAME.H  GAMEVT.CPP  game.cpp  game.h  main.cpp  main.h  shellui.cpp  shellui.h  startup.cpp  startup.h
src/CORE/: LINKSCF.CPP  VSINIT.CPP  VSINIT.H  VSMATH.CPP  VSMATH.H  WIN32.H
src/DEBUG/: CTEXTWIN.H  DEBUGVT.CPP  RAWOUT.CPP  TEXTWIN.CPP
src/ENGINE/CORE/: COMMON.H  LINKSCF.CPP  LINKSCF.H  SAFEVT.H  VSFORMAT.CPP  VSINIT.CPP  VSINIT.H  VSMATH.CPP  VSMATH.H  VSMEM.CPP  VSMEM.H  VSRETURN.CPP  VSSTAT.CPP  WIN32.H
src/ENGINE/DEBUG/: CTEXTWIN.H  DEBUGVT.CPP  RAWOUT.CPP  TEXTWIN.CPP  VSDBG.H
src/ENGINE/GDI/: GDICOMPACTVT.CPP  GDIRENDERVT.CPP  GDISTATUSVT.CPP  GDISUBVT.CPP  GDIVT.CPP  GEOMETRYVT.CPP  INVISWIN.CPP  VSGDI.CPP  VSGDI.H  VSGEOM.H  VSINVIS.H  VSWINDOW.CPP  VSWINDOW.H  VSWING.CPP  WINDOWSLOT38.CPP  WINDOWVT.CPP
src/ENGINE/MEDIA/: EFFSTRM.CPP  EFFSTRM.H  EFFVT.CPP  SOUNDVT.CPP  STREAMVT.CPP  VSSOUND.CPP  VSSOUND.H  VSSTRM.H
src/ENGINE/NET/: VSNET.CPP  VSNET.H  VSNETFIL.CPP  VSNETSTR.CPP  VSNETTCP.CPP  VSNET_FORWARD.H  VSNET_UNANNOTATED.INL
src/FRONTEND/: CURSOR.H  LOBBY.CPP  LOBBYVT.CPP  MAINMENU.CPP  MAINMENU.H  MENUSEL.CPP  MENUSEL.H  SCREENVT.CPP
src/GDI/: GDIVT.CPP  INVISWIN.CPP  VSGDI.CPP  VSGDI.H  VSINVIS.H  VSWINDOW.CPP  VSWINDOW.H  VSWING.CPP  WINDOWVT.CPP
src/LEMBALL/: GAME.CPP  GAME.H
src/LEMBALL/FRONTEND/: CURSOR.H  LOBBY.CPP  LOBBYVT.CPP  MAINMENU.CPP  MAINMENU.H  MENUSEL.CPP  MENUSEL.H  SCREENVT.CPP
src/LEMBALL/LEVEL/: DEMO.CPP  DEMO.H  LEVELRUN.CPP  LEVELRUN.H  LEVELSTAT.CPP  LEVELVT.CPP  TYPE18.CPP  TYPE18.H
src/LEMBALL/RESOURCE/: VARLOAD.CPP  VARLOAD.H  VARMGR.CPP  VARMGR.H
src/LEMBALL/SHELL/: ENTRY.CPP  ENTRY.H  OPTIONS.CPP  OPTIONS.H  PRIMARY.CPP  SHELLUI.CPP  SHELLUI.H
src/LEVEL/: DEMO.CPP  DEMO.H  DRAWTEXT.CPP  DRAWTEXT.H  LEVELRUN.CPP  LEVELRUN.H  LEVELSTAT.CPP  LEVELSTREAMVT.CPP  LEVELVT.CPP  TYPE18.CPP  TYPE18.H
src/MEMORY/: VSMEM.CPP  VSMEM.H
src/NET/: VSNET.CPP  VSNETFIL.CPP  VSNETSTR.CPP  VSNETTCP.CPP
src/RESOURCE/: MOGLOAD.CPP  MOGLOAD.H  TYPEDRES.H  VARLOAD.CPP  VARLOAD.H  VARMGR.CPP  VARMGR.H
src/SHELL/: ENTRY.CPP  ENTRY.H  OPTIONS.CPP  OPTIONS.H  PRIMARY.CPP  SHELLUI.CPP  SHELLUI.H
src/SOUND/: SOUNDVT.CPP  VSSOUND.CPP  VSSOUND.H
src/STAT/: VSSTAT.CPP
src/STREAM/: EFFSTRM.CPP  STREAMVT.CPP
src/VISOS/CORE/: LINKSCF.CPP  VSINIT.CPP  VSMATH.CPP
src/VISOS/DEBUG/: DEBUGVT.CPP  RAWOUT.CPP  TEXTWIN.CPP
src/VISOS/GDI/: GDIVT.CPP  INVISWIN.CPP  VSGDI.CPP  VSWINDOW.CPP  VSWING.CPP  WINDOWVT.CPP
src/VISOS/MEMORY/: VSMEM.CPP
src/VISOS/NET/: VSNET.CPP  VSNETFIL.CPP  VSNETSTR.CPP  VSNETTCP.CPP
src/VISOS/RESOURCE/: MOGLOAD.CPP
src/VISOS/SOUND/: SOUNDVT.CPP  VSSOUND.CPP
src/VISOS/STAT/: VSSTAT.CPP
src/VISOS/STREAM/: EFFSTRM.CPP  STREAMVT.CPP
src/audio/: audio_manager.cpp  audio_manager.h
src/engine/: common.h  fixed_math.cpp  fixed_math.h  graphics_driver.cpp  graphics_driver.h  memory_arena.cpp  memory_arena.h  render_dispatch.cpp  runtime_init.cpp  runtime_init.h
src/game/: cursor_render_client.h  demo_playback.cpp  demo_playback.h  eff_streams.cpp  eff_streams.h  game_app.cpp  game_app.h  geff.cpp  glevel.cpp  gmcb.cpp  gstatus.cpp  gvariant.cpp  gvload.cpp  level_runtime.cpp  level_runtime.h  level_status.cpp  main_menu_screen.cpp  main_menu_screen.h  menu_selector.cpp  menu_selector.h  primary_context_window.cpp  status_entry.cpp  type18_chunk_stream.cpp  type18_chunk_stream.h  variant_resource_loader.cpp  variant_resource_loader.h  variant_resource_manager.cpp  variant_resource_manager.h  vtable_callbacks.cpp  window_owner.cpp  window_owner.h
src/network/: file.cpp  lobby.cpp  nfile.cpp  nlobby.cpp  nruntime.cpp  nruntime.h  nsocket.cpp  nstream.cpp  nstream.h  runtime.cpp  runtime.h  safe_vtable.h  socket.cpp  stream.cpp  stream.h
src/platform/: lemball.rc  message_window.cpp  message_window.h  shell_ui.cpp  shell_ui.h  startup_options.cpp  startup_options.h  win32.h
src/resource/: resource_archive.cpp  resource_archive.h
src/stubs/: link_scaffold.cpp
src/visos/: mogload.cpp  mogload.h  vsaudio.cpp  vsaudio.h  vsdemo.cpp  vsdemo.h  vsgdi.cpp  vsgdi.h  vsinit.cpp  vsinit.h  vsmath.cpp  vsmath.h  vsmem.cpp  vsmem.h  vswin.cpp  vswin.h  win32.h
toolchains/openwatcom/: Dockerfile  README.md  wpp386-byteprobe.flags
tools/: audit_reccmp_annotations.py  build_target_objects.py  check_link_output.py  compare_ghidra_manifests.py  compare_rebuilt_functions.py  function_inventory.py  generate_annotation_candidates.py  generate_function_manifest.py  generate_ghidra_manifest.py  generate_objdiff.py  generate_reccmp_build.py  generate_reccmp_report.py  generate_reccmp_user.py  generate_status_report.py  msvc420-clion-env.bat  patch_c2.py  project_manifest.py  reconcile_function_inventory.py  run_runtime_smoke.py  silence_c4786_in_c2.py  validate_objdiff_report.py  validate_target_binary.py  verify  write_progress_report.py
tools/ghidra/: ExportFunctionManifest.java
tools/tests/: test_generate_reccmp_report.py
